Fix zoom image overlay z-index
Fix #37

--- a/src/scss/app/_plugin-zoom-image.scss
+++ b/src/scss/app/_plugin-zoom-image.scss
@@ -42,7 +42,8 @@
 // - For inline declarations, add !important to selector
 // =============================================================================
 .medium-zoom-overlay,
-.medium-zoom-image--open {
+.medium-zoom-image--open,
+.medium-zoom-image--opened {
     z-index: map-get($z-index, overlay) !important;
 }
 
