--- a/src/scss/app/_variables.scss
+++ b/src/scss/app/_variables.scss
@@ -14,8 +14,8 @@ $breakpoints: (
 $scrollbar-width: 5px;
 
 $z-index: (
-    progress    : 60,
-    overlay     : 50,
+    progress    : 2147483647, // z-index limit
+    overlay     : 2147483646, // z-index limit - 1
     githubcorner: 40,
     navbar      : 30,
     coverpage   : 20,
